[package]
name = "searchers"
version = "0.1.0"
authors = ["Patrick Chan <patrickchan1999@gmail.com>"]

[dependencies]
dirs = "1.0"
fs2 = "*"
Inflector = "*"
raise_window = { git = "https://github.com/torch-rs/raise_window" }
search_candidate = { git = "https://github.com/torch-rs/search_candidate" }
walkdir = "2"